# django-url-shortener

./: .dockerignore  Dockerfile  LICENSE  README.md  docker-compose.yaml  docker-entrypoint.sh  pyproject.toml
django-url-shortener/: manage.py
django-url-shortener/DjangoUrlShortener/: asgi.py  settings.py  urls.py  wsgi.py
django-url-shortener/urlshortener/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
django-url-shortener/urlshortener/migrations/: 0001_initial.py
django-url-shortener/urlshortener/templates/urlshortener/: default.html
django-url-shortener/users/: admin.py  forms.py  models.py
django-url-shortener/users/management/commands/: create_default_admin.py
django-url-shortener/users/migrations/: 0001_initial.py
