[tool.poetry]
name = "url-shortener"
version = "0.1.0"
description = "Simple URL shortener"
authors = [xbound]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.2"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.1"
black = {version = "^21.4b2", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
